force-app/main/default/objects/GuestCarRegistration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Guest Car Registration</label>
</CustomObject>