force-app/main/default/objects/GuestCarRegistration__c/fields/AdditionalRequestParam__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequestParam__c</fullName>
    <label>Additional Registration Request Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>