force-app/main/default/objects/GuestCarRegistration__c/fields/HouseAddress__c.field-meta.xml
<CustomField>
    <fullName>HouseAddress__c</fullName>
    <label>House Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>