force-app/main/default/objects/GuestCarRegistration__c/fields/RecognizeCarNumberUrl__c.field-meta.xml
<CustomField>
    <fullName>RecognizeCarNumberUrl__c</fullName>
    <label>Recognize Car Number Url</label>
    <type>Url</type>
</CustomField>