force-app/main/default/objects/GuestCarRegistration__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Registration Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>